# newsletter

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
.sqlx/: query-5b789a38988b30cba7ec1f1c0a3a52d961da2884080e142b4ff16ce10b0e411a.json
lib/: lib.rs
migrations/: 20230729190238_create_subscriptions_table.down.sql  20230729190238_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriber_endpoint.rs
tests/common/: mod.rs
