[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = "0.14.27"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlx-postgres", "uuid"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.18.1"
