[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
anyhow = "1.0.72"
axum = "0.6.19"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = "0.14.27"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "macros", "chrono", "migrate", "sqlx-postgres", "uuid", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tower-request-id = "0.2.1"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.8"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = "0.11.18"
rstest = "0.18.1"
